--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="citrusStylesSE__Hero_left--content citrusStylesSE-grid citrusStylesSE-grid--wrap citrusStylesSE-display-block"> 
                         <img class="citrusStylesSE__Hero_left--content-logo" src="images/preciouscat_drelseys_logo_white.avif" alt="Dr. Elsey’s logo">
                         <h1 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--light">THE LITTER CATS LOVE™</h1>
-                        <p class="citrusStylesSE__content-subHeading">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore <br class="m-hide">their proven, veterinarian-formulated solutions.</p>
+                        <p class="citrusStylesSE__content-subHeading citrusStylesSE__content-heading--light">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore <br class="m-hide">their proven, veterinarian-formulated solutions.</p>
                         <div>
                             <a class="" href="#"  onclick="clickTrackLink(this)">
                                 <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--light">Shop Now</button>
@@ -141,11 +141,12 @@
 
         <!-- Video Banner Section -->
         <section class="citrusStylesSE__videoBanner citrusStylesSE-container">
-            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center-top">
+            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
                 <div class="citrusStylesSE-grid__cell">
-                    <div class="citrusPrecious__videoTextContainer"> <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_drelseys_logo_black.png" alt="Doctor Elsey’s logo" class="citrusPrecious__DarkLogo">
-                        <h3>Made with heart, soul and science</h3>
-                        <p>Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving homes.</p>
+                    <div class="citrusStylesSE__videoBanner-content citrusStylesSE-centered"> 
+                        <img src="images/preciouscat_drelseys_logo_black.png" alt="Doctor Elsey’s logo" >
+                        <h3 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--dark">Made with heart, soul and science</h3>
+                        <p class="citrusStylesSE__content-subHeading citrusStylesSE__content-heading--dark">Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving homes.</p>
                     </div>
                 </div>
                 <div class="citrusStylesSE-grid__cell">
@@ -159,17 +160,17 @@
 
         <!-- Product Banner Section-->
         <section class="citrusStylesSE__productBanner citrusStylesSE-container">
-            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center-top">
-                <div class="citrusStylesSE-grid__cell"> 
-                    <img class="citrusPrecious__footerImg" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_footerIconImage.png" alt="Two happy cartoon cats rub up against each other."> 
+            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
+                <div class="citrusStylesSE-grid__cell citrusStylesSE__productBanner-product"> 
+                    <img src="images/preciouscat_footerIconImage.avif" alt="Two happy cartoon cats rub up against each other"> 
                 </div>
                 <div class="citrusStylesSE-grid__cell">
-                    <div class="citrusPrecious__footerTextContainer">
-                        <h3>Buy a package with purpose</h3>
-                        <p>Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the country.</p>
-                        <div class="citrusPrecious__largeCTA">
-                            <a href="https://www.petco.com/shop/en/petcostore/brand/dr-elseys" manual_cm_sp="/shop/en/petcostoresponsoredbrandpage:preciouscat:buyapackagewithpurpose:1:exploreproducts:exploreproducts" onclick="clickTrackLink(this)">
-                                <button>Explore Products</button>
+                    <div class="citrusStylesSE__productBanner-content citrusStylesSE-centered">
+                        <h3 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--dark">Buy a package with purpose</h3>
+                        <p class="citrusStylesSE__content-subHeading citrusStylesSE__content-heading--dark">Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the country.</p>
+                        <div>
+                            <a href="#" onclick="clickTrackLink(this)">
+                                <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Explore Products</button>
                             </a>
                         </div>
                     </div>
@@ -177,7 +178,6 @@
             </div>
         </section>
         <!-- Product Banner Section e -->
-
     </div>
     <!-- Markup end -->
 </body>
