--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <!-- Hero Section -->
         <section class="citrusStylesSE__Hero citrusStylesSE-container--super\@super">
-            <div class="citrusStylesSE-grid">
-                <div class="citrusStylesSE__Hero_left citrusStylesSE-grid__cell citrusStylesSE-grid__cell--width-72">                    
+            <div class="citrusStylesSE-grid citrusStylesSE-grid--no-gutter">
+                <div class="citrusStylesSE__BG--navy citrusStylesSE-grid__cell citrusStylesSE-grid__cell--width-72">                    
                     <div class="citrusStylesSE__Hero_left--content citrusStylesSE-grid citrusStylesSE-grid--wrap citrusStylesSE-display-block"> 
                         <img class="citrusStylesSE__Hero_left--content-logo" src="images/preciouscat_drelseys_logo_white.avif" alt="Dr. Elsey’s logo">
-                        <h1 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--light">THE LITTER CATS LOVE™</h1>
-                        <p class="citrusStylesSE__content-subHeading citrusStylesSE__content-heading--light">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore <br class="m-hide">their proven, veterinarian-formulated solutions.</p>
+                        <h1 class="citrusStylesSE__text--heading citrusStylesSE__text--light">THE LITTER CATS LOVE™</h1>
+                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--light">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore <br class="m-hide">their proven, veterinarian-formulated solutions.</p>
                         <div>
                             <a class="" href="#"  onclick="clickTrackLink(this)">
                                 <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--light">Shop Now</button>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="citrusStylesSE__Hero_right citrusStylesSE-grid__cell  citrusStylesSE-grid__cell--width-28">
+                <div class="citrusStylesSE__BG--light citrusStylesSE-grid__cell  citrusStylesSE-grid__cell--width-28">
                     <img class="citrusStylesSE__Hero_right--content-product citrusStylesSE-center-block" src="images/preciouscat_Dr Elsey's_Hero_Products.avif" alt="">
                 </div>
             </div>
@@ -38,14 +38,14 @@
 
         <!-- Benefit Section -->
         <section class="citrusStylesSE__benefit citrusStylesSE-container citrusStylesSE-centered">
-            <h2 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--dark">The Ultra litter difference</h2>
+            <h2 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">The Ultra litter difference</h2>
             <div class="citrusStylesSE-container citrusStylesSE-container--large">
-                <div class="citrusStylesSE-grid citrusStylesSE-grid--center-top">
+                <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-grid--center-top">
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
                             <img src="images/preciouscat_elsey-odor-control.avif" alt="Illustration of a cat nose.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
-                                <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Superior odor control</p>
+                                <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Superior odor control</p>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                         <div class="citrusStylesSE-card"> 
                             <img src="images/preciouscat_elsey-dust-free.avif" alt="Illustration of paw prints.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
-                                <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">99% dust-free low tracking</p>
+                                <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">99% dust-free low tracking</p>
                             </div>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                         <div class="citrusStylesSE-card"> 
                             <img src="images/preciouscat_elsey-natural.avif" alt="Illustration of mountains.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
-                                <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Natural ingredients</p>
+                                <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Natural ingredients</p>
                             </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         <div class="citrusStylesSE-card"> 
                             <img src="images/preciouscat_elsey-multicat.png" alt="Illustration of two cat faces.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
-                                <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Multi-cat strength</p>
+                                <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Multi-cat strength</p>
                             </div>
                         </div>
                     </div>
@@ -85,15 +85,15 @@
 
         <!-- Product Section -->
         <section class="citrusStylesSE__product citrusStylesSE-container citrusStylesSE-centered">
-            <h2 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--dark">Find the right litter for your cat, home and needs</h2>
-            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center-top ">
+            <h2 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Find the right litter for your cat, home and needs</h2>
+            <div class="citrusStylesSE-grid citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center-top ">
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE-card">
                         <a href="#" onclick="clickTrackLink(this)"> 
                             <img src="images/preciouscat_11.avif" alt="Illustration of a cat nose."> 
                         </a>
                         <div class="citrusStylesSE-card__body citrusStylesSE-left">
-                            <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Dr. Elsey’s Touch of Outdoors Clumping Clay Cat Litter</p> 
+                            <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Touch of Outdoors Clumping Clay Cat Litter</p> 
                             <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             <img src="images/preciouscat_22.avif" alt="Illustration of paw prints."> 
                         </a>
                         <div class="citrusStylesSE-card__body citrusStylesSE-left">
-                            <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Dr. Elsey’s Cat Attract Clumping Clay Cat Litter</p> 
+                            <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Cat Attract Clumping Clay Cat Litter</p> 
                             <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> 
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <img src="images/preciouscat_33.avif" alt="Illustration of mountains."> 
                         </a>
                         <div class="citrusStylesSE-card__body citrusStylesSE-left">
-                            <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Dr. Elsey’s Senior Cat Silica Gel Litter</p> 
+                            <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Senior Cat Silica Gel Litter</p> 
                             <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> 
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <img src="images/preciouscat_44.avif" alt="Illustration of mountains."> 
                         </a>
                         <div class="citrusStylesSE-card__body citrusStylesSE-left">
-                            <p class="citrusStylesSE-card__title citrusStylesSE__content-subHeading">Dr. Elsey’s Kitten Attract Clumping Clay Cat Litter</p> 
+                            <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Kitten Attract Clumping Clay Cat Litter</p> 
                             <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> 
                         </div>
                     </div>
@@ -140,13 +140,13 @@
         <!-- Product Section e -->
 
         <!-- Video Banner Section -->
-        <section class="citrusStylesSE__videoBanner citrusStylesSE-container">
-            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
+        <section class="citrusStylesSE__videoBanner citrusStylesSE-container citrusStylesSE__BG--light">
+            <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE__videoBanner-content citrusStylesSE-centered"> 
                         <img src="images/preciouscat_drelseys_logo_black.png" alt="Doctor Elsey’s logo" >
-                        <h3 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--dark">Made with heart, soul and science</h3>
-                        <p class="citrusStylesSE__content-subHeading citrusStylesSE__content-heading--dark">Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving homes.</p>
+                        <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Made with heart, soul and science</h3>
+                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving homes.</p>
                     </div>
                 </div>
                 <div class="citrusStylesSE-grid__cell">
@@ -160,14 +160,14 @@
 
         <!-- Product Banner Section-->
         <section class="citrusStylesSE__productBanner citrusStylesSE-container">
-            <div class="citrusStylesSE-grid citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
+            <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
                 <div class="citrusStylesSE-grid__cell citrusStylesSE__productBanner-product"> 
                     <img src="images/preciouscat_footerIconImage.avif" alt="Two happy cartoon cats rub up against each other"> 
                 </div>
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE__productBanner-content citrusStylesSE-centered">
-                        <h3 class="citrusStylesSE__content-heading citrusStylesSE__content-heading--dark">Buy a package with purpose</h3>
-                        <p class="citrusStylesSE__content-subHeading citrusStylesSE__content-heading--dark">Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the country.</p>
+                        <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Buy a package with purpose</h3>
+                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the country.</p>
                         <div>
                             <a href="#" onclick="clickTrackLink(this)">
                                 <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Explore Products</button>
