--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Benefit Section -->
         <section class="citrusStylesSE__benefit citrusStylesSE-container citrusStylesSE-centered">
             <h2 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">The Ultra litter difference</h2>
-            <div class="citrusStylesSE-container citrusStylesSE-container--large">
+            <div class="citrusStylesSE-container citrusStylesSE-container--large" id="citrusStylesSE__benefit-scroller">
                 <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-grid--center-top">
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
@@ -85,7 +85,7 @@
 
         <!-- Product Section -->
         <section class="citrusStylesSE__product citrusStylesSE-container citrusStylesSE-centered">
-            <h2 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Find the right litter for your cat, home and needs</h2>
+            <h2 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Find the right litter for your cat, home and&nbsp;needs</h2>
             <div class="citrusStylesSE__products">
                 <div class="citrusStylesSE-grid citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center-top ">
                     <div class="citrusStylesSE-grid__cell">
@@ -147,8 +147,8 @@
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE__videoBanner-content citrusStylesSE-centered"> 
                         <img src="images/preciouscat_drelseys_logo_black.png" alt="Doctor Elsey’s logo" >
-                        <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Made with heart, soul and science</h3>
-                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving homes.</p>
+                        <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Made with heart, soul and&nbsp;science</h3>
+                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving&nbsp;homes.</p>
                     </div>
                 </div>
                 <div class="citrusStylesSE-grid__cell">
@@ -168,8 +168,8 @@
                 </div>
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE__productBanner-content citrusStylesSE-centered">
-                        <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Buy a package with purpose</h3>
-                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the country.</p>
+                        <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Buy a package with&nbsp;purpose</h3>
+                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the&nbsp;country.</p>
                         <div>
                             <a href="#" onclick="clickTrackLink(this)">
                                 <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Explore Products</button>
