--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="citrusStylesSE__BG--light citrusStylesSE-grid__cell  citrusStylesSE-grid__cell--width-28">
-                    <img class="citrusStylesSE__Hero_right--content-product citrusStylesSE-center-block" src="images/preciouscat_Dr Elsey's_Hero_Products.avif" alt="">
+                    <img class="citrusStylesSE__Hero_right--content-product citrusStylesSE-center-block" src="images/preciouscat_DrElseys_Hero_Products.avif" alt="">
                 </div>
             </div>
         </section>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusPrecious__iframeContainer">
-                        <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/KI0LsqjOy2g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                        <iframe height="315" src="https://www.youtube-nocookie.com/embed/KI0LsqjOy2g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
