--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="citrusStylesSE__Hero_left--content citrusStylesSE-grid citrusStylesSE-grid--wrap citrusStylesSE-display-block"> 
                         <img class="citrusStylesSE__Hero_left--content-logo" src="images/preciouscat_drelseys_logo_white.avif" alt="Dr. Elsey’s logo">
                         <h1 class="citrusStylesSE__text--heading citrusStylesSE__text--light">THE LITTER CATS LOVE™</h1>
-                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--light">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore <br class="m-hide">their proven, veterinarian-formulated solutions.</p>
+                        <p class="citrusStylesSE__text--subHead citrusStylesSE__text--light">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore their proven, veterinarian-formulated solutions.</p>
                         <div>
                             <a class="" href="#"  onclick="clickTrackLink(this)">
                                 <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--light">Shop Now</button>
