--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Dr. Elsey’s | Petco</title>
+<title>Dr. Elsey’s | Petco </title>
 <meta name="description" content="Dr. Elsey’s | Petco">
 <link rel="stylesheet" href="CitrusStylesSE.css">
 <!-- <link rel="stylesheet" href="https://ca-team-landing-page-playbook.pages.dev/CitrusStylesSE.css"> -->
@@ -20,18 +20,18 @@
             <div class="citrusStylesSE-grid citrusStylesSE-grid--no-gutter">
                 <div class="citrusStylesSE__BG--navy citrusStylesSE-grid__cell citrusStylesSE-grid__cell--width-72">                    
                     <div class="citrusStylesSE__Hero_left--content citrusStylesSE-grid citrusStylesSE-grid--wrap citrusStylesSE-display-block"> 
-                        <img class="citrusStylesSE__Hero_left--content-logo" src="images/preciouscat_drelseys_logo_white.avif" alt="Dr. Elsey’s logo">
+                        <img class="citrusStylesSE__Hero_left--content-logo" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_drelseys_logo_white.png" alt="Dr. Elsey’s logo">
                         <h1 class="citrusStylesSE__text--heading citrusStylesSE__text--light">THE LITTER CATS LOVE™</h1>
                         <p class="citrusStylesSE__text--subHead citrusStylesSE__text--light">Dr. Elsey’s believes that litter can be loved™—by cats and pet parents. Explore their proven, veterinarian-formulated solutions.</p>
                         <div>
-                            <a class="" href="#"  onclick="clickTrackLink(this)">
-                                <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--light">Shop Now</button>
+                            <a class="" href="https://www.petco.com/shop/en/petcostore/brand/dr-elseys" onclick="clickTrackLink(this)">
+                                <span class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--light">Shop Now</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="citrusStylesSE__BG--light citrusStylesSE-grid__cell  citrusStylesSE-grid__cell--width-28">
-                    <img class="citrusStylesSE__Hero_right--content-product citrusStylesSE-center-block" src="images/preciouscat_DrElseys_Hero_Products.avif" alt="">
+                    <img class="citrusStylesSE__Hero_right--content-product citrusStylesSE-center-block" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_Dr Elsey's_Hero_Products.png" alt="Image of Ultra cat litter and a cartoon cat">
                 </div>
             </div>
         </section>
@@ -44,7 +44,7 @@
                 <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-grid--center-top">
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
-                            <img src="images/preciouscat_elsey-odor-control.avif" alt="Illustration of a cat nose.">
+                            <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_elsey-odor-control.png" alt="Illustration of a cat nose.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Superior odor control</p>
                             </div>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
-                            <img src="images/preciouscat_elsey-dust-free.avif" alt="Illustration of paw prints.">
+                            <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_elsey-dust-free.png" alt="Illustration of paw prints.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">99% dust-free low tracking</p>
                             </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
-                            <img src="images/preciouscat_elsey-natural.avif" alt="Illustration of mountains.">
+                            <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_elsey-natural.png" alt="Illustration of mountains.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Natural ingredients</p>
                             </div>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
-                            <img src="images/preciouscat_elsey-multicat.png" alt="Illustration of two cat faces.">
+                            <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_elsey-multicat.png" alt="Illustration of two cat faces.">>
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Multi-cat strength</p>
                             </div>
@@ -77,8 +77,9 @@
                 </div>
             </div>
             <div>
-                <a href="#" onclick="clickTrackLink(this)">
-                    <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Shop Ultra</button>
+                <a href="https://www.petco.com/shop/en/petcostore/brand/dr-elseys/clumping-cat-litter" onclick="clickTrackLink(this)">
+                    <span class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Shop Ultra</span>
+                    <!-- <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Shop Ultra</button> -->
                 </a>
             </div>
         </section>
@@ -91,52 +92,52 @@
                 <div class="citrusStylesSE-grid citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center-top ">
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card">
-                            <a href="#" onclick="clickTrackLink(this)"> 
-                                <img src="images/preciouscat_11.avif" alt="Illustration of a cat nose."> 
+                            <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-touch-of-outdoors-multi-cat-litter" onclick="clickTrackLink(this)"> 
+                                <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_11.png" alt="Illustration of a cat nose."> 
                             </a>
                             <div class="citrusStylesSE-card__body citrusStylesSE-left">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Touch of Outdoors Clumping Clay Cat Litter</p> 
-                                <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> </div>
+                                <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-touch-of-outdoors-multi-cat-litter" onclick="clickTrackLink(this)"> Shop Now </a> </div>
                         </div>
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card">
-                            <a href="#" onclick="clickTrackLink(this)"> 
-                                <img src="images/preciouscat_22.avif" alt="Illustration of paw prints."> 
+                            <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-cat-attract-scoopable-cat-litter" onclick="clickTrackLink(this)"> 
+                                <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_22.png" alt="Illustration of paw prints.">
                             </a>
                             <div class="citrusStylesSE-card__body citrusStylesSE-left">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Cat Attract Clumping Clay Cat Litter</p> 
-                                <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> 
+                                <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-cat-attract-scoopable-cat-litter" onclick="clickTrackLink(this)"> Shop Now </a> 
                             </div>
                         </div>
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card">
-                            <a href="#" onclick="clickTrackLink(this)"> 
-                                <img src="images/preciouscat_33.avif" alt="Illustration of mountains."> 
+                            <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-senior-cat-litter" onclick="clickTrackLink(this)"> 
+                                <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_33.png" alt="Illustration of mountains.">
                             </a>
                             <div class="citrusStylesSE-card__body citrusStylesSE-left">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Senior Cat Silica Gel Litter</p> 
-                                <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> 
+                                <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-senior-cat-litter" onclick="clickTrackLink(this)"> Shop Now </a> 
                             </div>
                         </div>
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card">
-                            <a href="#" onclick="clickTrackLink(this)"> 
-                                <img src="images/preciouscat_44.avif" alt="Illustration of mountains."> 
+                            <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-kitten-attract-scoopable-cat-litter"  onclick="clickTrackLink(this)"> 
+                                <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_44.png" alt="Illustration of two cat faces.">
                             </a>
                             <div class="citrusStylesSE-card__body citrusStylesSE-left">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Dr. Elsey’s Kitten Attract Clumping Clay Cat Litter</p> 
-                                <a href="#" onclick="clickTrackLink(this)"> Shop Now </a> 
+                                <a href="https://www.petco.com/shop/en/petcostore/product/precious-cat-dr-elseys-kitten-attract-scoopable-cat-litter"  onclick="clickTrackLink(this)"> Shop Now </a> 
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <a href="#" onclick="clickTrackLink(this)">
-                    <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Shop All Products</button>
+                <a href="https://www.petco.com/shop/en/petcostore/brand/dr-elseys" onclick="clickTrackLink(this)">
+                    <span class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Shop All Products</span>
                 </a>
             </div>
         </section>
@@ -147,7 +148,7 @@
             <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE__videoBanner-content citrusStylesSE-centered"> 
-                        <img src="images/preciouscat_drelseys_logo_black.png" alt="Doctor Elsey’s logo" >
+                        <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_drelseys_logo_black.png" alt="Doctor Elsey’s logo" class="citrusPrecious__DarkLogo">
                         <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Made with heart, soul and&nbsp;science</h3>
                         <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Since 1987, Dr. Elsey’s has been creating products that solve complex needs to help keep cats in loving&nbsp;homes.</p>
                     </div>
@@ -165,15 +166,15 @@
         <section class="citrusStylesSE__productBanner citrusStylesSE-container">
             <div class="citrusStylesSE-grid citrusStylesSE-grid__cell--gap-20 citrusStylesSE-grid--no-gutter citrusStylesSE-box-auto citrusStylesSE-container--large citrusStylesSE-grid--center">
                 <div class="citrusStylesSE-grid__cell citrusStylesSE__productBanner-product"> 
-                    <img src="images/preciouscat_footerIconImage.avif" alt="Two happy cartoon cats rub up against each other"> 
+                    <img class="citrusPrecious__footerImg" src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_footerIconImage.png" alt="Two happy cartoon cats rub up against each other.">
                 </div>
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusStylesSE__productBanner-content citrusStylesSE-centered">
                         <h3 class="citrusStylesSE__text--heading citrusStylesSE__text--dark">Buy a package with&nbsp;purpose</h3>
                         <p class="citrusStylesSE__text--subHead citrusStylesSE__text--dark">Dr. Elsey and his wife, Kathy, have a vision to help support pets and people in need. The company has donated over $13 million to nonprofit organizations, shelters and rescues across the&nbsp;country.</p>
                         <div>
-                            <a href="#" onclick="clickTrackLink(this)">
-                                <button class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Explore Products</button>
+                            <a href="https://www.petco.com/shop/en/petcostore/brand/dr-elseys" onclick="clickTrackLink(this)">
+                                <span class="citrusStylesSE-button citrusStylesSE-button--common citrusStylesSE-button--navy">Explore Products</span>
                             </a>
                         </div>
                     </div>
@@ -183,5 +184,6 @@
         <!-- Product Banner Section e -->
     </div>
     <!-- Markup end -->
+
 </body>
 </html>
